0.3.2-beta.1 update optimize with culling & scrolling (task list view) apply responsive view (complete button visible on narrow width & prevent components collapsing) apply highet min-width to window (800 to 900)

--- a/src/components/TodoContent.scss
+++ b/src/components/TodoContent.scss
@@ -118,6 +118,12 @@
       display: flex;
       margin-top: 15px;
 
+      @media (max-width: 1000px) {
+        .sort-options {
+          display: none !important;
+        }
+      }
+
       & > .view-modes {
         display: flex;
         flex: 1;
